--- a/main_app/templates/rooms/index.html
+++ b/main_app/templates/rooms/index.html
@@ -6,8 +6,15 @@
     <title>Base</title>
   </head>
   <body>
-    <h1>About</h1>
+    <h1>Rooms</h1>
     <hr />
+    {% for room in rooms %}
+    <h2>Room {{ room.number }}</h2>
+    <p>Type: {{ room.room_type }}</p>
+    <p>Number of Beds: {{ room.beds }}</p>
+    <p>Handicap Accessible: {{ room.accessible }}</p>
+    <hr />
+    {% endfor %}
     <footer>© 2021 Base, Inc.</footer>
   </body>
 </html>
