--- a/main_app/templates/rooms/index.html
+++ b/main_app/templates/rooms/index.html
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Base</title>
-  </head>
-  <body>
-    <h1>Rooms</h1>
-    <hr />
-    {% for room in rooms %}
-    <h2>Room {{ room.number }}</h2>
-    <p>Type: {{ room.room_type }}</p>
-    <p>Number of Beds: {{ room.beds }}</p>
-    <p>Handicap Accessible: {{ room.accessible }}</p>
-    <hr />
-    {% endfor %}
-    <footer>© 2021 Base, Inc.</footer>
-  </body>
-</html>
+<!-- prettier-ignore -->
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+<h2>Rooms</h2>
+<hr />
+{% for room in rooms %}
+<h3>
+  <a href="/rooms/{{ room.id }}">Room {{ room.number }}</a>
+</h3>
+<p>Type: {{ room.room_type }}</p>
+<hr />
+<!-- prettier-ignore -->
+{% endfor %}
+{% endblock %}
