--- a/main_app/templates/rooms/details.html
+++ b/main_app/templates/rooms/details.html
@@ -10,4 +10,7 @@
 <p>Handicap Accessible: {{ room.accessible }}</p>
 <p>Currently Occupied: {{ room.occupied }}</p>
 <p>Spotless: {{ room.spotless }}</p>
+<hr />
+<p><a href="{% url 'rooms_update' room.id %}">Update Room Details</a></p>
+<p><a href="{% url 'rooms_delete' room.id %}">Delete Room</a></p>
 {% endblock %}
