Add Booking model and update URL's

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,7 +16,7 @@
       <nav>
         <li>
           <ul>
-            <a href="/rooms">Rooms</a>
+            <a href="/bookings">Bookings</a>
           </ul>
         </li>
       </nav>
