--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <p>
-  <a href="/rooms">Check out our rooms.</a>
+  <a href="/bookings">View Bookings</a>
 </p>
 {% endblock %}
