--- a/main_app/templates/main_app/booking_confirm_delete.html
+++ b/main_app/templates/main_app/booking_confirm_delete.html
@@ -3,8 +3,8 @@
 {% load static %}
 
 {% block content %}
-<h4>Delete Room</h4>
-<p>Are you sure you want to delete room {{ room }}?</p>
+<h4>Delete Booking</h4>
+<p>Are you sure you want to delete booking {{ booking }}?</p>
 <form action="" method="post">
   {% csrf_token %}
   <input type="submit" value="Delete" />
