--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -3,15 +3,12 @@
 {% load static %}
 
 {% block content %}
-<h2>Bookings</h2>
-<hr />
-<p><a href="/bookings/create">Book a Stay</a></p>
+<h2>{{ username }}'s Bookings</h2>
 <hr />
 {% for booking in bookings %}
 <h3>
   <a href="/bookings/{{ booking.id }}">Booking #{{ booking }}</a>
 </h3>
-<p>Booked By: {{ booking.user.username }}</p>
 <p>Check-In: {{ booking.check_in_date }}</p>
 <p>Check-Out: {{ booking.check_out_date }}</p>
 <hr />
