--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,6 +27,9 @@
           <li>
             <a href="/about">About</a>
           </li>
+          <li>
+            <a href="/login">Log In</a>
+          </li>
         </ul>
       </nav>
       <hr />
