Add url for signing up

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -36,6 +36,9 @@
           </li>
           {% else %}
           <li>
+            <a href="{% url 'signup' %}">Sign Up</a>
+          </li>
+          <li>
             <a href="{% url 'login' %}">Log In</a>
           </li>
           {% endif %}
