--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -3,8 +3,8 @@
 {% load static %}
 
 {% block content %}
-<h2>Log In</h2>
-<form action="." method="post">
+<h2>Sign Up</h2>
+<form method="post">
   <!-- prettier-ignore -->
   {% csrf_token %}
   {{ form.as_p }}
