--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="shortcut icon" href="{% static 'base-favicon-32.png' %}" type="image/x-icon" />
     <title>Base</title>
   </head>
   <body>
@@ -29,7 +30,7 @@
           </li>
           {% if user.is_authenticated %}
           <li>
-            <a href="{% url 'profile' user.username %}">Profile</a>
+            <a href="{% url 'profile' %}">Profile</a>
           </li>
           <li>
             <a href="{% url 'logout' %}">Log Out</a>
