--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -7,7 +7,8 @@
 <form method="post">
   <!-- prettier-ignore -->
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ user_form.as_p }}
+  {{ guest_profile_form.as_p }}
 
   <input type="submit" value="Submit" />
 </form>
