--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,6 +11,10 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.css"
+    />
     <link rel="stylesheet" href="{% static 'style.css' %}" />
     <link rel="shortcut icon" href="{% static 'base-favicon-32.png' %}" type="image/x-icon" />
     <title>Base</title>
@@ -53,10 +57,20 @@
     {% endblock %}
 
     <footer>© 2021 Base, Inc.</footer>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
+    <script>
+      $('.datepicker').datepicker({
+        format: 'yyyy-mm-dd',
+        startDate: 'Today',
+        autoclose: true,
+        todayHighlight: true
+      });
+    </script>
   </body>
 </html>
