--- a/main_app/templates/availability.html
+++ b/main_app/templates/availability.html
@@ -1,12 +1,18 @@
-<!-- prettier-ignore -->
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
+
 <h2>Availability</h2>
-<ul>
-  {% for room in object_list %}
-  <li>Room #{{ room }}</li>
-  {% endfor %}
-</ul>
+
+{% for room_type, bed_types in available_rooms.items %}
+<div>
+  <h3>{{ room_type }}</h3>
+  <ul>
+    {% for bed_type in bed_types %}
+    <li>{{ bed_type }}</li>
+    {% endfor %}
+  </ul>
+</div>
+{% endfor %}
+
 {% endblock %}
