Add book_guest_details URL

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -4,21 +4,9 @@
 
 <h2>Check Availability</h2>
 
-<!-- <form action="{% url 'availability' %}" method="get">
-  <label for="date">Check-In Date</label>
-  <input id="date" name="date" type="text" class="datepicker" />
-  <label for="date">Check- Date</label>
-  <input id="date" name="date" type="text" class="datepicker" />
-  <input type="submit" value="Search" />
-</form> -->
-
-<form action="{% url 'availability' %}" method="get">
+<form action="{% url 'book' %}" method="get">
   {{ form }}
   <input type="submit" value="Search">
 </form>
-
-<p>
-  <a href="/bookings/create">Book a Stay</a>
-</p>
 
 {% endblock %}
