Add account sign-up to confirmation page

--- a/main_app/templates/book/confirmation.html
+++ b/main_app/templates/book/confirmation.html
@@ -2,8 +2,13 @@
 {% load static %}
 {% block content %}
 
-<h2>Sign Up</h2>
+<h2>Confirmation</h2>
 
+<h3>Booking #{{ booking.id }}</h3>
+<p>{{ booking.check_in_date }}</p>
+<p>{{ booking.check_out_date }}</p>
+
+<h3>Sign up for an account to manage your bookings.</h3>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
