--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -1,17 +1,30 @@
-<!-- prettier-ignore -->
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
-<h2>{{ username }}'s Bookings</h2>
-<hr />
+
+<h2>{{ guest.first_name }}'s Bookings</h2>
+
+<h3>Account Settings</h3>
+<p>Username: {{ user.username }}</p>
+
+<h3>Guest Details</h3>
+<p>First Name: {{ guest.first_name }}</p>
+<p>Last Name: {{ guest.last_name }}</p>
+<p>Email: {{ guest.email }}</p>
+<p>Phone: {{ guest.phone }}</p>
+<p>Street: {{ guest.street }}</p>
+<p>City: {{ guest.city }}</p>
+<p>State: {{ guest.state }}</p>
+<p>Zip Code: {{ guest.zip_code }}</p>
+<p>Country: {{ guest.country }}</p>
+
+<h3>Bookings</h3>
 {% for booking in bookings %}
-<h3>
+<h4>
   <a href="/bookings/{{ booking.id }}">Booking #{{ booking }}</a>
-</h3>
+</h4>
 <p>Check-In: {{ booking.check_in_date }}</p>
 <p>Check-Out: {{ booking.check_out_date }}</p>
-<hr />
-<!-- prettier-ignore -->
 {% endfor %}
+
 {% endblock %}
