--- a/main_app/templates/book/confirmation.html
+++ b/main_app/templates/book/confirmation.html
@@ -8,11 +8,13 @@
 <p>{{ booking.check_in_date }}</p>
 <p>{{ booking.check_out_date }}</p>
 
+{% if not user.is_authenticated %}
 <h3>Sign up for an account to manage your bookings.</h3>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <input type="submit" value="Submit" />
 </form>
+{% endif %}
 
 {% endblock %}
