--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -6,7 +6,8 @@
 
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ user_form.as_p }}
+  {{ guest_form.as_p }}
   <input type="submit" value="Submit" />
 </form>
 
