--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,61 +5,55 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.css"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.css" />
     <link rel="stylesheet" href="{% static 'style.css' %}" />
     <link rel="shortcut icon" href="{% static 'base-favicon-32.png' %}" type="image/x-icon" />
     <title>Base</title>
   </head>
+  
   <body>
-    <header>
-      <h1>
-        <a href="/">Base</a>
-      </h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="{% url 'bookings_index' %}">Bookings</a>
-          </li>
-          {% if user.is_authenticated %}
-          <li>
-            <a href="{% url 'profile' %}">Profile</a>
-          </li>
-          <li>
-            <a href="{% url 'logout' %}">Log Out</a>
-          </li>
-          {% else %}
-          <li>
-            <a href="{% url 'signup' %}">Sign Up</a>
-          </li>
-          <li>
-            <a href="{% url 'login' %}">Log In</a>
-          </li>
-          {% endif %}
-        </ul>
-      </nav>
-      <hr />
-    </header>
+    <div class="container">
+      <header class="row">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="/">Base</a>
+          
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-    <!-- prettier-ignore -->
-    {% block content %}
-    {% endblock %}
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              {% if user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Log In</a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
+        </nav>
+      </header>
+  
+      <main class="row">
+        {% block content %}
+        {% endblock %}
+      </main>
+  
+      <footer class="row bg-dark text-white">© 2021 Base, Inc.</footer>
+    </div>
 
-    <footer>© 2021 Base, Inc.</footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
     <script>
       $('.datepicker').datepicker({
