--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.css" />
-    <link rel="stylesheet" href="{% static 'style.css' %}" />
-    <link rel="shortcut icon" href="{% static 'base-favicon-32.png' %}" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'main_app/style.css' %}" />
+    <link rel="shortcut icon" href="{% static 'main_app/base-favicon-32.png' %}" type="image/x-icon" />
     <title>Base</title>
   </head>
   
