--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,12 +1,122 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load widget_tweaks %}
 {% block content %}
 
-<h2>Check Availability</h2>
-
-<form action="{% url 'book' %}" method="get">
-  {{ form }}
-  <input type="submit" value="Search">
-</form>
+<div class="col">
+  <section class="row justify-content-center py-5 section-welcome">
+    <div class="col-6 text-white">
+      <h1>Welcome</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
+    </div>
+    <div class="col-4 bg-white">
+      <h2>Check Availability</h2>
+      <form action="{% url 'book' %}" method="get">
+        {% for field in form %}
+          <div class="form-floating mb-3">
+            {{ field }}
+            {{ field.label_tag }}
+          </div>
+        {% endfor %}
+        <input type="submit" value="Search">
+      </form>
+    </div>
+  </section>
+  
+  <section class="row justify-content-center py-5">
+    <div class="col-10">
+      <div class="row text-center">
+        <h1>About Our Hotel</h1>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+        </div>
+        <div class="col">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="row bg-light justify-content-center py-5">
+    <div class="col-10">
+      <div class="row text-center">
+        <h1>Rooms</h1>
+      </div>
+      <div class="row">
+        <div class="carousel slide" data-bs-ride="carousel" id="carouselRooms">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="{% static 'main_app/images/Treehouse-London-2019-(14).jpg' %}" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'main_app/images/191106_Rm1216_0421_LR.jpg' %}" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'main_app/images/191106_Rm1406_0377_LR.jpg' %}" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="{% static 'main_app/images/Treehouse London 2019 (25).jpg' %}" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="row justify-content-center py-5">
+    <div class="col-10">
+      <div class="row text-center">
+        <h1>Amenities</h1>
+      </div>
+      <div class="row row-cols-3">
+        <div class="col">
+          <div class="card">
+            <img class="card-img-top" src="{% static 'main_app/images/191105_THH_0122_LR_RT.jpg' %}" alt="">
+            <div class="card-body">
+              <h3 class="card-title">Bar and Lounge</h3>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img class="card-img-top" src="{% static 'main_app/images/191106_THH_35517_LR.jpg' %}" alt="">
+            <div class="card-body">
+              <h3 class="card-title">Courtyard Garden</h3>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img class="card-img-top" src="{% static 'main_app/images/treehouse_london_2020_rushed_16.jpg' %}" alt="">
+            <div class="card-body">
+              <h3 class="card-title">Meeting Room</h3>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <section class="row bg-light justify-content-center py-5">
+    <div class="col-10">
+      <div class="row text-center">
+        <h1>Neighborhood</h1>
+      </div>
+      <div class="row">
+        <div class="col">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+        </div>
+        <div class="col">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
 
 {% endblock %}
