--- a/main_app/static/main_app/style.css
+++ b/main_app/static/main_app/style.css
@@ -1,4 +1,4 @@
-.section-welcome {
+#welcome {
   background-image: url('images/The\ Nest\ -\ 1920\ x\ 1080.jpg');
   background-position: center;
   background-size: cover;
