Add basic styling to first page of booking process

--- a/main_app/templates/book/index.html
+++ b/main_app/templates/book/index.html
@@ -2,17 +2,79 @@
 {% load static %}
 {% block content %}
 
-<h2>Pick a Room</h2>
-
-{% for room_type, bed_types in results.items %}
-<div>
-  <h3>{{ room_type }}</h3>
-  <ul>
-    {% for bed_type, rooms in bed_types.items %}
-    <li>{{ bed_type }} <a href="/book/{{ rooms.0 }}"><button>Book</button></a></li>
+<section class="row py-5">
+  <div class="col-7">
+    <h2>Pick a Room</h2>
+    
+    {% for room_type, bed_types in results.items %}
+    <div class="card mb-3">
+      <div class="row g-0">
+        <div class="col-lg-4">
+          <div class="card-body">
+            <h3 class="card-title text-capitalize">{{ room_type }}</h3>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <ul class="list-unstyled">
+              {% for bed_type, rooms in bed_types.items %}
+              <li class="card-text mb-2 text-capitalize">
+                <a href="/book/{{ rooms.0 }}"><button class="btn btn-primary btn-sm">Book</button></a>
+                {{ bed_type }}
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+        
+        <div class="col-lg-8 py-3 pe-3">
+          <div id="carousel-rooms-{{ forloop.counter }}" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-1.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-2.jpg" alt="">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-3.jpg" alt="">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel-rooms-{{ forloop.counter }}" role="button" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel-rooms-{{ forloop.counter }}" role="button" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
     {% endfor %}
-  </ul>
-</div>
-{% endfor %}
+  </div>
+  
+  <div class="col-4 offset-1">
+    <div class="row mb-3 p-3 bg-light">
+      <h2>Your Booking</h2>
+      <ul class="list-unstyled">
+        <li>Check-In Date: {{ request.GET.check_in_date }}</li>
+        <li>Check-Out Date: {{ request.GET.check_out_date }}</li>
+        <li>Number of Guests: {{ request.GET.total_guests }}</li>
+      </ul>
+    </div>
+
+    <div class="row p-3 bg-light">
+      <h2>Search for Availability</h2>
+      <form action="{% url 'book' %}" method="get">
+        {% for field in form %}
+        <div class="form-floating mb-3">
+          {{ field }}
+          {{ field.label_tag }}
+        </div>
+        {% endfor %}
+        <input class="btn btn-primary" type="submit" value="Search">
+      </form>  
+    </div>
+  </div>
+</section>
 
 {% endblock %}
