Add basic styling to guest details page

--- a/main_app/templates/book/create_booking.html
+++ b/main_app/templates/book/create_booking.html
@@ -2,12 +2,47 @@
 {% load static %}
 {% block content %}
 
-<h2>Guest Details</h2>
+<section class="row py-5">
+  <div class="col-7">
+    <h2>Guest Details</h2>
+    
+    <form action="" method="post">
+      {% csrf_token %}
+      {% for field in form %}
+      <div class="form-floating mb-3">
+        {{ field }}
+        {{ field.label_tag }}
+      </div>
+      {% endfor %}
+      <input class="btn btn-primary" type="submit" value="Book">
+    </form>
+  </div>
 
-<form action="" method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Book">
-</form>
+  <div class="col-4 offset-1">
+    <div class="row mb-3 p-3 bg-light d-flex align-items-start">
+      <h2>Your Booking</h2>
+      <ul class="list-unstyled">
+        <li>Check-In Date: {{ request.session.check_in_date }}</li>
+        <li>Check-Out Date: {{ request.session.check_out_date }}</li>
+        <li>Number of Guests: {{ request.session.total_guests }}</li>
+      </ul>
+  
+      {% if room.room_type == 'standard, street view' %}
+      <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-1-1.jpg" alt="">
+      {% elif room.room_type == 'standard, courtyard view' %}
+      <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631294/base/room-2-1.jpg" alt="">
+      {% elif room.room_type == 'suite, street view' %}
+      <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-3-1.jpg" alt="">
+      {% else %}
+      <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-4-1.jpg" alt="">
+      {% endif %}
+
+      <ul class="list-unstyled">
+        <li>Room Type: {{ room.room_type }}</li>
+        <li>Beds: {{ room.beds }}</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
 {% endblock %}
