Add basic styling to confirmation page

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -6,9 +6,10 @@
 <section id="welcome" class="row justify-content-center py-5">
   <div class="col-4 text-white">
     <h1>Welcome</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
   </div>
-  
+
   <div class="col-3 offset-3 p-3 bg-white">
     <h2>Book Your Stay</h2>
     <form action="{% url 'book' %}" method="get">
@@ -30,10 +31,16 @@
     </div>
     <div class="row">
       <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
       </div>
       <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
       </div>
     </div>
   </div>
@@ -76,7 +83,9 @@
           <img class="card-img-top" src="{% static 'main_app/images/191105_THH_0122_LR_RT.jpg' %}" alt="">
           <div class="card-body">
             <h3 class="card-title">Bar and Lounge</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+              sit amet dictum sit amet justo.</p>
           </div>
         </div>
       </div>
@@ -85,7 +94,9 @@
           <img class="card-img-top" src="{% static 'main_app/images/191106_THH_35517_LR.jpg' %}" alt="">
           <div class="card-body">
             <h3 class="card-title">Courtyard Garden</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+              sit amet dictum sit amet justo.</p>
           </div>
         </div>
       </div>
@@ -94,7 +105,9 @@
           <img class="card-img-top" src="{% static 'main_app/images/treehouse_london_2020_rushed_16.jpg' %}" alt="">
           <div class="card-body">
             <h3 class="card-title">Meeting Room</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+              sit amet dictum sit amet justo.</p>
           </div>
         </div>
       </div>
@@ -109,10 +122,16 @@
     </div>
     <div class="row">
       <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
       </div>
       <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
       </div>
     </div>
   </div>
