--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -2,79 +2,89 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.css" />
-    <link rel="stylesheet" href="{% static 'main_app/style.css' %}" />
-    <link rel="shortcut icon" href="{% static 'main_app/base-favicon-32.png' %}" type="image/x-icon" />
-    <title>Base</title>
-  </head>
-  
-  <body>
-    <div class="container">
-      <header class="row sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="/">Base</a>
-          
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
 
-          <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="/#about">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/#rooms">Rooms</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/#amenities">Amenities</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/#neighborhood">Neighborhood</a>
-              </li>
-            </ul>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+  <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/css/bootstrap-datepicker3.css" />
+  <link rel="stylesheet" href="{% static 'main_app/css/style.css' %}" />
+  <link rel="shortcut icon" href="{% static 'main_app/base-favicon-32.png' %}" type="image/x-icon" />
+  <title>Base</title>
+</head>
 
-            <ul class="navbar-nav">
-              {% if user.is_authenticated %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-              </li>
-              {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Log In</a>
-              </li>
-              {% endif %}
-            </ul>
-          </div>
-        </nav>
-      </header>
-  
-      {% block content %}
-      {% endblock %}
-  
-      <footer class="row p-5 bg-dark text-white">© 2021 Base, Inc.</footer>
-    </div>
+<body>
+  <div class="container">
+    <header class="row sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">Base</a>
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
-    <script>
-      $('.datepicker').datepicker({
-        format: 'yyyy-mm-dd',
-        startDate: 'Today',
-        autoclose: true,
-        todayHighlight: true
-      });
-    </script>
-  </body>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/#rooms">Rooms</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/#amenities">Amenities</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/#neighborhood">Neighborhood</a>
+            </li>
+          </ul>
+
+          <ul class="navbar-nav">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Log In</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'book' %}">BOOK</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    {% block content %}
+    {% endblock %}
+
+    <footer class="row p-5 bg-dark text-white">© 2021 Base, Inc.</footer>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-datepicker@1.9.0/dist/js/bootstrap-datepicker.min.js"></script>
+  <script>
+    $('.datepicker').datepicker({
+      format: 'yyyy-mm-dd',
+      startDate: 'Today',
+      autoclose: true,
+      todayHighlight: true
+    });
+  </script>
+</body>
+
 </html>
