--- a/main_app/templates/book/index.html
+++ b/main_app/templates/book/index.html
@@ -4,15 +4,17 @@
 
 <section class="row py-5">
   <div class="col-7">
+    {% if results %}
     <h1>Pick a Room</h1>
-    
+
     {% for room_type, bed_types in results.items %}
     <div class="card mb-3">
       <div class="row g-0">
         <div class="col-lg-4">
           <div class="card-body">
             <h3 class="card-title text-capitalize">{{ room_type }}</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua.</p>
             <ul class="list-unstyled">
               {% for bed_type, rooms in bed_types.items %}
               <li class="card-text mb-2 text-capitalize">
@@ -23,25 +25,34 @@
             </ul>
           </div>
         </div>
-        
+
         <div class="col-lg-8 py-3 pe-3">
-          <div id="carousel-rooms-{{ forloop.counter }}" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
+          <div id="carousel-rooms-{{ forloop.counter }}" class="carousel slide" data-bs-ride="carousel"
+            data-bs-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-1.jpg" alt="">
+                <img class="d-block w-100"
+                  src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-1.jpg"
+                  alt="">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-2.jpg" alt="">
+                <img class="d-block w-100"
+                  src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-2.jpg"
+                  alt="">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-3.jpg" alt="">
+                <img class="d-block w-100"
+                  src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-{{ forloop.counter }}-3.jpg"
+                  alt="">
               </div>
             </div>
-            <a class="carousel-control-prev" href="#carousel-rooms-{{ forloop.counter }}" role="button" data-bs-slide="prev">
+            <a class="carousel-control-prev" href="#carousel-rooms-{{ forloop.counter }}" role="button"
+              data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carousel-rooms-{{ forloop.counter }}" role="button" data-bs-slide="next">
+            <a class="carousel-control-next" href="#carousel-rooms-{{ forloop.counter }}" role="button"
+              data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </a>
@@ -50,8 +61,9 @@
       </div>
     </div>
     {% endfor %}
+    {% endif %}
   </div>
-  
+
   <div class="col-4 offset-1">
     <div class="row mb-3 p-3 bg-light">
       <h2>Your Booking</h2>
@@ -72,7 +84,7 @@
         </div>
         {% endfor %}
         <input class="btn btn-primary" type="submit" value="Search">
-      </form>  
+      </form>
     </div>
   </div>
 </section>
