Update image path in style.css

--- a/main_app/static/main_app/css/style.css
+++ b/main_app/static/main_app/css/style.css
@@ -1,5 +1,5 @@
 #welcome {
-  background-image: url('../images/The\ Nest\ -\ 1920\ x\ 1080.jpg');
+  background-image: url('../images/lobby.jpg');
   background-position: center;
   background-size: cover;
 }
