--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -17,9 +17,9 @@
 
 <body>
   <div class="container">
-    <header class="row sticky-top">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">Base</a>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand base-logo" href="/">Base</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,20 +29,8 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/#about">About</a>
+              <a class="nav-link" href="/">About</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/#rooms">Rooms</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/#amenities">Amenities</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/#neighborhood">Neighborhood</a>
-            </li>
-          </ul>
-
-          <ul class="navbar-nav">
             {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'profile' %}">Profile</a>
@@ -58,10 +46,8 @@
               <a class="nav-link" href="{% url 'login' %}">Log In</a>
             </li>
             {% endif %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'book' %}">BOOK</a>
-            </li>
           </ul>
+          <a class="book-btn" href="{% url 'book' %}">BOOK</a>
         </div>
       </nav>
     </header>
@@ -69,7 +55,7 @@
     {% block content %}
     {% endblock %}
 
-    <footer class="row p-5 bg-dark text-white">© 2021 Base, Inc.</footer>
+    <footer>© 2021 Base, Inc.</footer>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
