--- a/main_app/templates/book/confirmation.html
+++ b/main_app/templates/book/confirmation.html
@@ -2,127 +2,108 @@
 {% load static %}
 {% block content %}
 
-<section class="row justify-content-center py-5">
-  <div class="col-10">
-    <h1 class="text-center">You're All Set!</h1>
-
-    <div class="card mb-3">
-      <div class="row g-0">
-        <div class="col-lg-6">
-          <div class="card-body">
-            <h3 class="card-title">Booking #{{ booking.id }}</h3>
-            <h4 class="card-text">Check-In Date: {{ booking.check_in_date }}</h4>
-            <h4 class="card-text">Check-Out Date: {{ booking.check_out_date }}</h4>
-            <ul class="list-unstyled">
-              <li class="card-text">Number of Guests: {{ booking.total_guests }}</li>
-              <li class="card-text">Room Type: {{ booking.room.room_type }}</li>
-              <li class="card-text">Beds: {{ booking.room.beds }}</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="col-lg-6">
-          {% if booking.room.room_type == 'standard, street view' %}
-          <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-1-1.jpg"
-            alt="">
-          {% elif booking.room.room_typ == 'standard, courtyard view' %}
-          <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631294/base/room-2-1.jpg"
-            alt="">
-          {% elif booking.room.room_typ == 'suite, street view' %}
-          <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-3-1.jpg"
-            alt="">
-          {% else %}
-          <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-4-1.jpg"
-            alt="">
-          {% endif %}
-        </div>
+<section class="section-booking confirmation">
+  <div class="booking-3-3">
+    <h1>confirmation</h1>
+    <div class="room-card">
+      <div class="room-card-text">
+        <h2>Booking #{{ booking.id }}</h2>
+        <h4>Check-In Date: {{ booking.check_in_date }}</h4>
+        <h4>Check-Out Date: {{ booking.check_out_date }}</h4>
+        <h4>Number of Guests: {{ booking.total_guests }}</h4>
+        <h4>Room Type: {{ booking.room.room_type }}</h4>
+        <h4>Beds: {{ booking.room.beds }}</h4>
+      </div>
+      <div class="room-card-img">
+        {% if booking.room.room_type == 'standard, street view' %}
+        <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-1-1.jpg"
+          alt="">
+        {% elif booking.room.room_typ == 'standard, courtyard view' %}
+        <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631294/base/room-2-1.jpg"
+          alt="">
+        {% elif booking.room.room_typ == 'suite, street view' %}
+        <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-3-1.jpg"
+          alt="">
+        {% else %}
+        <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-4-1.jpg"
+          alt="">
+        {% endif %}
       </div>
     </div>
-
-    {% if not user.is_authenticated %}
-    <div class="row justify-content-center">
-      <div class="col-lg-6 p-3 bg-light">
-        <h3>Sign up for an account to manage your bookings online.</h3>
-        <form method="post">
-          {% csrf_token %}
-          {% for field in form %}
-          <div class="form-floating mb-3">
-            {{ field }}
-            {{ field.label_tag }}
-            {{ field.help_text }}
-          </div>
-          {% endfor %}
-          <input class="btn btn-primary" type="submit" value="Submit" />
-        </form>
-      </div>
-    </div>
-    {% endif %}
   </div>
+
+  {% if not user.is_authenticated %}
+  <h1>create an account</h1>
+  <div class="booking-container signup">
+    <form class="form-columns-1" method="post">
+      {% csrf_token %}
+      {% for field in form %}
+      <div class="form-floating">
+        {{ field }}
+        {{ field.label_tag }}
+      </div>
+      {% endfor %}
+      <input class="base-btn" type="submit" value="Submit" />
+    </form>
+    <ul>
+      <li>150 characters or fewer. Letters, digits and @/./+/-/_ only.</li>
+      <li>Your password can’t be too similar to your other personal information.</li>
+      <li>Your password must contain at least 8 characters.</li>
+      <li>Your password can’t be a commonly used password.</li>
+      <li>Your password can’t be entirely numeric.</li>
+    </ul>
+  </div>
+  {% endif %}
+
 </section>
 
-<section id="amenities" class="row justify-content-center py-5">
-  <div class="col-10">
-    <div class="row text-center">
-      <h1>Amenities</h1>
+<section id="amenities">
+  <h1>amenities</h1>
+  <div class="amenities-cards">
+    <div class="amenities-card">
+      <img src="{% static 'main_app/images/191105_THH_0122_LR_RT.jpg' %}" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Bar and Lounge</h3>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+          sit amet dictum sit amet justo.</p>
+      </div>
     </div>
-    <div class="row row-cols-3">
-      <div class="col">
-        <div class="card">
-          <img class="card-img-top" src="{% static 'main_app/images/191105_THH_0122_LR_RT.jpg' %}" alt="">
-          <div class="card-body">
-            <h3 class="card-title">Bar and Lounge</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
-              sit amet dictum sit amet justo.</p>
-          </div>
-        </div>
+    <div class="amenities-card">
+      <img src="{% static 'main_app/images/191106_THH_35517_LR.jpg' %}" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Courtyard Garden</h3>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+          sit amet dictum sit amet justo.</p>
       </div>
-      <div class="col">
-        <div class="card">
-          <img class="card-img-top" src="{% static 'main_app/images/191106_THH_35517_LR.jpg' %}" alt="">
-          <div class="card-body">
-            <h3 class="card-title">Courtyard Garden</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
-              sit amet dictum sit amet justo.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img class="card-img-top" src="{% static 'main_app/images/treehouse_london_2020_rushed_16.jpg' %}" alt="">
-          <div class="card-body">
-            <h3 class="card-title">Meeting Room</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
-              sit amet dictum sit amet justo.</p>
-          </div>
-        </div>
+    </div>
+    <div class="amenities-card">
+      <img src="{% static 'main_app/images/treehouse_london_2020_rushed_16.jpg' %}" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Meeting Room</h3>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+          sit amet dictum sit amet justo.</p>
       </div>
     </div>
   </div>
 </section>
 
-<section id="neighborhood" class="row bg-light justify-content-center py-5">
-  <div class="col-10">
-    <div class="row text-center">
-      <h1>Neighborhood</h1>
-    </div>
-    <div class="row">
-      <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
-          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
-          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
-      </div>
-      <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
-          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
-          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
-      </div>
-    </div>
-  </div>
+<section id="neighborhood">
+  <h1>neighborhood</h1>
+  <p class="text-column-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+    ut
+    labore et dolore
+    magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+    placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+    justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+  <p class="text-column-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+    ut
+    labore et dolore
+    magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+    placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+    justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
 </section>
 
 {% endblock %}
