--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -2,14 +2,14 @@
 {% load static %}
 {% block content %}
 
-<section id="welcome" class="row justify-content-center py-5">
-  <div class="col-4 text-white">
-    <h1>Welcome</h1>
+<section id="welcome">
+  <div class="welcome-text">
+    <h1>welcome</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
       magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus sit amet dictum sit amet justo.</p>
   </div>
 
-  <div class="col-3 offset-3 p-3 bg-white">
+  <div class="welcome-form">
     <h2>Book Your Stay</h2>
     <form action="{% url 'book' %}" method="get">
       {% for field in form %}
@@ -18,122 +18,98 @@
         {{ field.label_tag }}
       </div>
       {% endfor %}
-      <input class="btn btn-primary" type="submit" value="Search">
+      <input class="base-btn" type="submit" value="Search">
     </form>
   </div>
 </section>
 
-<section id="about" class="row justify-content-center py-5">
-  <div class="col-10">
-    <div class="row text-center">
-      <h1>About Our Hotel</h1>
-    </div>
-    <div class="row">
-      <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
-          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
-          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+<section id="about">
+  <h1>about our hotel</h1>
+  <p class="text-column-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    labore et dolore
+    magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+    placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+    justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+  <p class="text-column-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    labore et dolore
+    magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+    placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+    justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+</section>
+
+<section id="rooms">
+  <h1>rooms</h1>
+  <div class="carousel slide" data-bs-ride="carousel" id="carousel-rooms">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="{% static 'main_app/images/room-2-1.jpg' %}" alt="">
       </div>
-      <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
-          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
-          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static 'main_app/images/room-4-2.jpg' %}" alt="">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static 'main_app/images/room-2-3.jpg' %}" alt="">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="{% static 'main_app/images/room-1-3.jpg' %}" alt="">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carousel-rooms" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel-rooms" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </a>
+  </div>
+</section>
+
+<section id="amenities">
+  <h1>amenities</h1>
+  <div class="amenities-cards">
+    <div class="amenities-card">
+      <img src="{% static 'main_app/images/191105_THH_0122_LR_RT.jpg' %}" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Bar and Lounge</h3>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+          sit amet dictum sit amet justo.</p>
+      </div>
+    </div>
+    <div class="amenities-card">
+      <img src="{% static 'main_app/images/191106_THH_35517_LR.jpg' %}" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Courtyard Garden</h3>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+          sit amet dictum sit amet justo.</p>
+      </div>
+    </div>
+    <div class="amenities-card">
+      <img src="{% static 'main_app/images/treehouse_london_2020_rushed_16.jpg' %}" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Meeting Room</h3>
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
+          sit amet dictum sit amet justo.</p>
       </div>
     </div>
   </div>
 </section>
 
-<section id="rooms" class="row bg-light justify-content-center py-5">
-  <div class="col-10">
-    <div class="row text-center">
-      <h1>Rooms</h1>
-    </div>
-    <div class="row">
-      <div class="carousel slide" data-bs-ride="carousel" id="carouselRooms">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="{% static 'main_app/images/room-2-1.jpg' %}" alt="">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'main_app/images/room-4-2.jpg' %}" alt="">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'main_app/images/room-2-3.jpg' %}" alt="">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="{% static 'main_app/images/room-1-3.jpg' %}" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="amenities" class="row justify-content-center py-5">
-  <div class="col-10">
-    <div class="row text-center">
-      <h1>Amenities</h1>
-    </div>
-    <div class="row row-cols-3">
-      <div class="col">
-        <div class="card">
-          <img class="card-img-top" src="{% static 'main_app/images/191105_THH_0122_LR_RT.jpg' %}" alt="">
-          <div class="card-body">
-            <h3 class="card-title">Bar and Lounge</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
-              sit amet dictum sit amet justo.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img class="card-img-top" src="{% static 'main_app/images/191106_THH_35517_LR.jpg' %}" alt="">
-          <div class="card-body">
-            <h3 class="card-title">Courtyard Garden</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
-              sit amet dictum sit amet justo.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img class="card-img-top" src="{% static 'main_app/images/treehouse_london_2020_rushed_16.jpg' %}" alt="">
-          <div class="card-body">
-            <h3 class="card-title">Meeting Room</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-              incididunt ut labore et dolore magna aliqua. Quis eleifend quam adipiscing vitae proin. Sit amet cursus
-              sit amet dictum sit amet justo.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section id="neighborhood" class="row bg-light justify-content-center py-5">
-  <div class="col-10">
-    <div class="row text-center">
-      <h1>Neighborhood</h1>
-    </div>
-    <div class="row">
-      <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
-          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
-          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
-      </div>
-      <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
-          placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
-          justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
-      </div>
-    </div>
-  </div>
+<section id="neighborhood">
+  <h1>neighborhood</h1>
+  <p class="text-column-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    labore et dolore
+    magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+    placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+    justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
+  <p class="text-column-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    labore et dolore
+    magna aliqua. Pretium fusce id velit ut tortor pretium. Eget nulla facilisi etiam dignissim diam. Massa
+    placerat duis ultricies lacus sed. Dui vivamus arcu felis bibendum ut tristique et. Eu sem integer vitae
+    justo. Ullamcorper velit sed ullamcorper morbi. Tempus quam pellentesque nec nam.</p>
 </section>
 
 {% endblock %}
