--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -2,84 +2,79 @@
 {% load static %}
 {% block content %}
 
-<section class="row">
-  <div class="col">
-    <h1>{{ guest.first_name }}'s Profile</h1>
-
-    <div class="row">
-      <div class="col-4 bg-light p-3">
-        <h2>Account Settings</h2>
-        <form action="{% url 'update_user' %}" method="post">
-          {% csrf_token %}
-          {% for field in user_form %}
-          <div class="form-floating mb-3">
-            {{ field }}
-            {{ field.label_tag }}
-          </div>
-          {% endfor %}
-          <input class="btn btn-primary" type="submit" value="Update">
-        </form>
-      </div>
-
-      <div class="col-8 bg-light p-3">
-        <h2>Guest Details</h2>
-        <form action="{% url 'update_guest' %}" method="post">
-          <div class="form-columns-2">
-            {% csrf_token %}
-            {% for field in guest_form %}
-            <div class="form-floating mb-3">
-              {{ field }}
-              {{ field.label_tag }}
-            </div>
-            {% endfor %}
-          </div>
-          <input class="btn btn-primary" type="submit" value="Update">
-        </form>
-      </div>
+<section class="section-booking profile">
+  <h1 class="profile-h1">{{ guest.first_name }}'s profile</h1>
+  <div class="booking-2-3">
+    <div class="booking-container">
+      <h2>Guest Details</h2>
+      <form class="form-columns-2" action="{% url 'update_guest' %}" method="post">
+        {% csrf_token %}
+        {% for field in guest_form %}
+        <div class="form-floating">
+          {{ field }}
+          {{ field.label_tag }}
+        </div>
+        {% endfor %}
+        <input class="base-btn" type="submit" value="Update">
+      </form>
     </div>
 
-    <div class="row">
-      <div class="col">
-        <h2>Bookings</h2>
-        <div class="row row-cols-1 row-cols-lg-2">
-          {% for booking in bookings %}
-          <div class="card mb-3">
-            <div class="row g-0">
-              <div class="col-lg-6">
-                <div class="card-body">
-                  <h3 class="card-title">Booking #{{ booking.id }}</h3>
-                  <h4 class="card-text">Check-In Date: {{ booking.check_in_date }}</h4>
-                  <h4 class="card-text">Check-Out Date: {{ booking.check_out_date }}</h4>
-                  <ul class="list-unstyled">
-                    <li class="card-text">Number of Guests: {{ booking.total_guests }}</li>
-                    <li class="card-text">Room Type: {{ booking.room.room_type }}</li>
-                    <li class="card-text">Beds: {{ booking.room.beds }}</li>
-                  </ul>
-                </div>
-              </div>
+    {% if bookings %}
+    <h1>bookings</h1>
 
-              <div class="col-lg-6">
-                {% if booking.room.room_type == 'standard, street view' %}
-                <img class="img-fluid"
-                  src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-1-1.jpg" alt="">
-                {% elif booking.room.room_typ == 'standard, courtyard view' %}
-                <img class="img-fluid"
-                  src="https://res.cloudinary.com/alanavery/image/upload/v1611631294/base/room-2-1.jpg" alt="">
-                {% elif booking.room.room_typ == 'suite, street view' %}
-                <img class="img-fluid"
-                  src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-3-1.jpg" alt="">
-                {% else %}
-                <img class="img-fluid"
-                  src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-4-1.jpg" alt="">
-                {% endif %}
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
+    {% for booking in bookings %}
+    <div class="room-card">
+      <div class="room-card-text">
+        <h2>Booking #{{ booking.id }}</h2>
+        <h4>Check-In Date: {{ booking.check_in_date }}</h4>
+        <h4>Check-Out Date: {{ booking.check_out_date }}</h4>
+        <h4>Number of Guests: {{ booking.total_guests }}</h4>
+        <h4>Room Type: {{ booking.room.room_type }}</h4>
+        <h4>Beds: {{ booking.room.beds }}</h4>
       </div>
+      <div class="room-card-img">
+        {% if booking.room.room_type == 'standard, street view' %}
+        <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-1-1.jpg"
+          alt="">
+        {% elif booking.room.room_typ == 'standard, courtyard view' %}
+        <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631294/base/room-2-1.jpg"
+          alt="">
+        {% elif booking.room.room_typ == 'suite, street view' %}
+        <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-3-1.jpg"
+          alt="">
+        {% else %}
+        <img class="img-fluid" src="https://res.cloudinary.com/alanavery/image/upload/v1611631295/base/room-4-1.jpg"
+          alt="">
+        {% endif %}
+      </div>
+    </div>
+    {% endfor %}
+    {% endif %}
+  </div>
+
+  <div class="booking-1-3">
+    <div class="booking-container">
+      <h2>Account Settings</h2>
+      <form class="form-columns-1" action="{% url 'update_user' %}" method="post">
+        {% csrf_token %}
+        {% for field in user_form %}
+        <div class="form-floating">
+          {{ field }}
+          {{ field.label_tag }}
+        </div>
+        {% endfor %}
+        <input class="base-btn" type="submit" value="Update">
+      </form>
+      <ul>
+        <li>150 characters or fewer. Letters, digits and @/./+/-/_ only.</li>
+        <li>Your password can’t be too similar to your other personal information.</li>
+        <li>Your password must contain at least 8 characters.</li>
+        <li>Your password can’t be a commonly used password.</li>
+        <li>Your password can’t be entirely numeric.</li>
+      </ul>
     </div>
   </div>
+
 </section>
 
 {% endblock %}
